--- a/ImageUploadUtility/index.html
+++ b/ImageUploadUtility/index.html
@@ -7,38 +7,42 @@
         <script src="kendo/js/jquery.min.js"></script>
         <script src="kendo/js/kendo.mobile.min.js"></script>
         <script src="scripts/lib/everlive.all.min.js"></script>
-        <script src="scripts/app/identity-provider.js"></script>
+        <script src="scripts/app/everloader.js"></script>
         <script src="scripts/app/main.js" type="text/javascript"></script>
-
         <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
         <link href="styles/main.css" rel="stylesheet" />
     </head>
-    <body id="friendsApp">
+    <body id="imagesApp">
+        <h1>
+            WTF?
+        </h1>
         <section data-role="layout" data-id="default">
             <!--View content will render here-->
         </section>
         <!--WELCOME VIEW -->
-        <div data-role="view" id="welcome" data-layout="default" class="welcome-scrn form-view" data-model="app.viewModels.login">
-            <h1><b>Everlive</b> sample application</h1>
-            <form id="login-form">
-                <ul data-role="listview" data-style="inset">
-                    <li><label for="loginUsername">Username</label> <input type="text" id="loginUsername" required validationMessage="Username is required!" /></li>
-                    <li><label for="loginPassword">Password</label> <input type="password" id="loginPassword" required validationMessage="Password is required!" /></li>
-                </ul>
-            </form>
-            <ol class="group-wrp">
-                <li>
-                    <span data-role="touch" data-bind="events: { tap: login }" style="display: inline-block">
-                        <a data-role="button" class="btn-login btn-big">Login</a>
-                    </span>
-                    <span data-role="touch" data-bind="events: { tap: loginWithFacebook }" style="display: inline-block">
-                        <a data-role="button" class="btn-login-fb btn-big">Login</a>
-                    </span>
-                </li>
-                <li class="b-top"><a data-role="button" href="views/signupView.html" class="btn-signup btn-big">Sign up</a> </li>
-            </ol>
-
-            <div data-role="footer"><p>Powered by Icenium Everlive.</p></div>
+        <div data-role="view" id="view-all-images" data-layout="default" class="images-view" data-model="app.viewModels.images">
+            <header data-role="header">
+                <div data-role="navbar">
+                    Images
+                    <a class="nav-button" data-align="right" data-role="button" data-icon="add" href="views/addImage.html"></a>
+                </div>
+            </header>
+            
+            <ul id="images-listview" data-pull-to-refresh="true" data-style="inset" data-role="listview" data-template="imageTemplate"
+                data-bind="source: images"></ul>
+            <p id="no-images-span" hidden="hidden" class="no-images-msg">
+                <b>You don't have any images uploaded yet.</b><br /><br />Tap on the plus sign to add one.
+            </p>
         </div>
+        
+        <!-- Stuff ListView Template -->
+        <script type="text/x-kendo-template" id="imageTemplate">
+            <div data-role="touch">
+                <div class="user-share">
+                    <img data-align="left" id="Picture" data-bind="attr:{src: PictureUrl}" width="75" />
+                    <a class="img-title">${Title}</a>
+                </div>
+            </div>
+        </script>
     </body>
 </html>
